# ConcurrencyLib

./: .gitignore  CMakeLists.txt  TODO.md  parallel_sum.cpp  run_test.py  table.h
.github/workflows/: cmake-multi-platform.yml  tests-pipeline.yml
lib/: CMakeLists.txt
lib/include/: async_function.hpp  async_result.hpp  contract.hpp  sweet_async.hpp  task_group.hpp  thread_pool.hpp  thread_pool_task_base.hpp
lib/include/utils/: linalg.hpp  logger.hpp  matrix.hpp  tester.hpp  timer.hpp
lib/private/: async_task.hpp  shared_state.hpp  subscription.hpp  thread_pool_task.hpp  type_traits.hpp  void.hpp
lib/src/: table.cpp  thread_pool.cpp
src/: CMakeLists.txt  rand_gen.hpp  table.cpp
src/include/: async_function.hpp  contract.hpp
src/include/async/: function.hpp  group.hpp  result.hpp
src/include/tp/: thread_pool.hpp  thread_pool_task_base.hpp
src/include/utils/: logger.hpp
src/lib/: thread_pool.cpp
src/private/: async_task.hpp  shared_state.hpp  subscription.hpp  type_traits.hpp
src/private/async/: bound_task.hpp  group_state.hpp  task.hpp
src/private/core/: contract.hpp  future.hpp  promise.hpp  shared_state.hpp
src/private/subscription/: base_sub.hpp  catch_sub.hpp  forward_sub.hpp  join_sub.hpp  pipe_sub.hpp  simple_sub.hpp  then_sub.hpp  to_std_sub.hpp
tests/: CMakeLists.txt  contract_test.cpp  linear_equations_test.cpp  matrix_test.cpp  parallel_sum.cpp  parallel_sum_test.cpp  sort_test.cpp  task_group_test.cpp  thread_pool_test.cpp
tests/test_utils/: rand_gen.hpp  table.hpp  tester.hpp
